macros/tests/invalid/large_scale.rs
use rust_decimal_macros::dec;

fn main() {
    let _ = dec!(0.00000_00000_00000_00000_00000_0001);
}
